# pfun-cma-engine-c

./: .gitignore  BUILD.md  CMakeLists.txt  MANIFEST.in  Makefile  PROPOSED.changes.md  PROPOSED.html  PROPOSED.md  PROPOSED_LLVM.md  README.html  README.md  convert-to-llvm.py  demo.py  demo_jit.py  pyproject.toml  setup.py
experiments/: test_scaling.c
pfun_cma_engine/: __init__.py  jit_engine.py  orc_jit_engine.py  pfun_cma_engine.py
src/: pfun_cma_engine.c  pfun_cma_engine.h
src/pfun_cma_engine/: _pfun_cma_engine_module.c
src/pfun_cma_engine_c.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: ir-golden-metrics.txt  ir-structural-check.llcheck
tools/: benchmark-compare.py  check-ir-metrics.sh  ir-pass-explorer.sh  ir-profile.sh
