[project]
name = "pfun-cma-engine"
version = "0.1.0"
description = "Optimized C extensions for PFun CMA model engine."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.2.6",
    "pfun-path-helper>=0.1.5",
]
[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.sdist]
include = [
    "pfun_cma_engine/*.py",
    "src/pfun_cma_engine.c",
    "src/pfun_cma_engine.h",
]

[tool.hatch.build.targets.wheel]
include = [
    "pfun_cma_engine/*.py",
    "src/pfun_cma_engine.c",
    "src/pfun_cma_engine.h",
]

[tool.hatch.build.targets.build_ext]
include = [
    "pfun_cma_engine/*.py",
    "src/pfun_cma_engine.c",
    "src/pfun_cma_engine.h",
]

# Note: Extension modules are declared via `setup.py` for compatibility
# with editable builds and current setuptools behaviour.
# The setup.py builds the extension as pfun_cma_engine/pfun_cma_engine.so
# which matches the package structure defined in package_dir.

[dependency-groups]
cext = [
    "setuptools>=65.5.0",
    "wheel>=0.38.4",
]
dev = [
    "ipython>=9.14.1",
]
