[project]
name = "pfun-cma-engine-c"
version = "0.1.0"
description = "Optimized C extensions for PFun CMA model engine."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "llvmlite>=0.48.0",
    "numpy>=2.2.6",
    "pfun-path-helper>=0.1.5",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pfun_cma_engine"]

[tool.setuptools.package-data]
pfun_cma_engine = ["*.so", "*.a", "*.py"]


# Note: Extension modules are declared via `setup.py` for compatibility
# with editable builds and current setuptools behaviour.
# The setup.py builds the extension as pfun_cma_engine/libpfun_cma_engine.so
# which matches the package structure defined in package_dir.

[dependency-groups]

dev = [
    "ipython>=9.14.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
]
